# LabelingMachine

./: CMakeLists.txt  README.md
include/: Controller.h  Conveyor.h  LabelStrategy.h  MachineComponent.h  Printer.h  Scale.h  ThermalDirectStrategy.h  ThermalTransferStrategy.h
src/: Controller.cpp  Conveyor.cpp  Printer.cpp  Scale.cpp  ThermalDirectStrategy.cpp  ThermalTransferStrategy.cpp  main.cpp
tests/: mock_printer.h  test_labeling_machine.cpp
